Fixes for responsivnes

--- a/src/components/no-provider.component/no-provider.component.css
+++ b/src/components/no-provider.component/no-provider.component.css
@@ -8,8 +8,10 @@
 }
 
 .btn-link {
-    padding: 0.6em 1.25em;
     width: auto;
+    padding: 0.6em 1.25em;
     margin: auto;
     margin-top: 2em;
+
+    text-align: center;
 }
