--- a/src/components/login.component/login.component.css
+++ b/src/components/login.component/login.component.css
@@ -2,8 +2,9 @@
     display: flex;
     flex-direction: column;
     align-items: flex-start;
-    padding: 35px;
+    padding: 1em;
 
+    max-width: 100%;
     border: 1px solid #d1d1d1;
     border-radius: 6px;
 }
@@ -17,7 +18,12 @@
 }
 
 .text {
-    line-height: 160%
+    line-height: 160%;
+}
+
+.text.key {
+    word-break: break-all;
+
 }
 
 .btn {
